--- a/login.html
+++ b/login.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login GPS Tracker</title>
+    <title>GPS Tracker - Login</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="login-container">
-        <h1>GPS Tracker Login</h1>
+        <h1>Acceso GPS</h1>
         <form id="loginForm">
             <div class="form-group">
                 <label for="username">Usuario:</label>
                 <select id="username" required>
-                    <option value="">Seleccione usuario</option>
+                    <option value="">Seleccione...</option>
                     <option value="Movil1">Móvil 1</option>
                     <option value="Movil2">Móvil 2</option>
                 </select>
@@ -22,7 +22,7 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" required>
             </div>
-            <button type="submit">Iniciar Sesión</button>
+            <button type="submit">Ingresar</button>
         </form>
     </div>
     <script src="script.js"></script>
