--- a/login.html
+++ b/login.html
@@ -2,24 +2,24 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPS Tracker - Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Login GPS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="login-container">
-        <h1>Acceso GPS</h1>
+        <h1>🚖 GPS Flota</h1>
         <form id="loginForm">
-            <div class="form-group">
-                <label for="username">Usuario:</label>
+            <div class="input-group">
+                <label>Usuario:</label>
                 <select id="username" required>
-                    <option value="">Seleccione...</option>
+                    <option value="">Seleccionar...</option>
                     <option value="Movil1">Móvil 1</option>
                     <option value="Movil2">Móvil 2</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label for="password">Contraseña:</label>
+            <div class="input-group">
+                <label>Contraseña:</label>
                 <input type="password" id="password" required>
             </div>
             <button type="submit">Ingresar</button>
