--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>GPS Aeropuerto SCL</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <title>Tracker GPS - SCL</title>
+    <!-- Leaflet CSS (URL oficial) -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
+        crossorigin=""/>
+    <!-- Estilos locales -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Contenedor principal para móvil -->
-    <div class="mobile-container">
-        <!-- Mapa rectangular centrado -->
-        <div id="map"></div>
-        
-        <!-- Panel de usuario -->
-        <div id="user-info">
-            <p>Usuario: <span id="current-user"></span></p>
-            <button id="logout-btn">Cerrar Sesión</button>
-        </div>
+    <!-- Contenedor del mapa (requiere altura absoluta) -->
+    <div id="map"></div>
+    
+    <!-- Panel de usuario -->
+    <div id="user-info">
+        <p>Usuario: <span id="current-user"></span></p>
+        <button id="logout-btn">Cerrar Sesión</button>
     </div>
 
-    <!-- Scripts -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <!-- Leaflet JS (DEBE cargarse antes que script.js) -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
+    <!-- Script local -->
     <script src="script.js"></script>
 </body>
 </html>
