--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker GPS - SCL</title>
+    <title>Tracker GPS</title>
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <!-- Estilos locales -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Contenedor del mapa (DEBE existir) -->
+    <!-- Mapa -->
     <div id="map"></div>
     
-    <!-- Panel de usuario -->
-    <div id="user-info">
+    <!-- Panel usuario -->
+    <div id="user-info" style="display:none;">
         <p>Usuario: <span id="current-user"></span></p>
         <button id="logout-btn">Cerrar Sesión</button>
     </div>
 
-    <!-- Scripts (ORDEN CRÍTICO) -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <!-- Scripts -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
     <script src="script.js"></script>
 </body>
 </html>
