--- a/login.html
+++ b/login.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login GPS</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
-        /* Estilos específicos para login */
+        body {
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
         .login-container {
-            max-width: 400px;
-            margin: 50px auto;
-            padding: 25px;
             background: white;
+            padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
+            width: 90%;
+            max-width: 400px;
         }
         .form-group {
             margin-bottom: 20px;
@@ -21,15 +28,15 @@
         label {
             display: block;
             margin-bottom: 8px;
-            font-weight: bold;
         }
         input, select {
             width: 100%;
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
+            box-sizing: border-box;
         }
-        button[type="submit"] {
+        button {
             width: 100%;
             padding: 12px;
             background: #2ecc71;
@@ -42,7 +49,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2 style="text-align: center; margin-bottom: 20px;">Acceso GPS</h2>
+        <h2 style="text-align:center;">Acceso GPS</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="username">Usuario:</label>
