--- a/index.html
+++ b/index.html
@@ -181,10 +181,11 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     
     <script>
-        // Configuración Firebase
+        // Configuración Firebase (usa tus propios datos)
         const firebaseConfig = {
             apiKey: "AIzaSyDT85qotm1EpAJzJzCFeoNwGyo-VKhM6dk",
             authDomain: "gpsaccionascl2025.firebaseapp.com",
+            databaseURL: "https://gpsaccionascl2025-default-rtdb.firebaseio.com",
             projectId: "gpsaccionascl2025",
             storageBucket: "gpsaccionascl2025.appspot.com",
             messagingSenderId: "742246618721",
