--- a/login.html
+++ b/login.html
@@ -130,7 +130,7 @@
             const password = document.getElementById('password').value;
             const errorElement = document.getElementById('errorMessage');
             
-            // Credenciales válidas (en producción usa Firebase Auth)
+            // Credenciales válidas
             const validCredentials = {
                 "Movil1": "MovilAcciona2025",
                 "Movil2": "MovilAcciona2025", 
