--- a/index.html
+++ b/index.html
@@ -112,17 +112,12 @@
         }
         /* Estilos para los iconos de autos */
         .vehicle-icon {
-            background-size: 60%;
+            background-size: 70%;
             background-repeat: no-repeat;
             background-position: center;
-            width: 30px;
-            height: 30px;
+            width: 32px;
+            height: 32px;
             border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            font-weight: bold;
             border: 2px solid white;
             box-shadow: 0 0 5px rgba(0,0,0,0.5);
             margin-right: 8px;
@@ -136,10 +131,16 @@
             background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z"/><circle cx="7.5" cy="14.5" r="1.5"/><circle cx="16.5" cy="14.5" r="1.5"/></svg>');
             opacity: 0.7;
         }
+        /* Estilo para los marcadores en el mapa */
         .vehicle-marker {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-size: 70%;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            border: 2px solid white;
+            box-shadow: 0 0 5px rgba(0,0,0,0.5);
         }
     </style>
 </head>
@@ -361,32 +362,30 @@
             if (markers[mobileId]) return;
             
             const icon = L.divIcon({
-                className: '',
+                className: 'vehicle-marker',
+                html: '',
+                iconSize: [32, 32],
+                iconAnchor: [16, 16],
+                popupAnchor: [0, -16],
                 html: `<div style="
                     background-color: ${isOnline ? '#27ae60' : '#95a5a6'};
                     background-image: url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\" fill=\"white\"><path d=\"M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z\"/><circle cx=\"7.5\" cy=\"14.5\" r=\"1.5\"/><circle cx=\"16.5\" cy=\"14.5\" r=\"1.5\"/></svg>');
-                    background-size: 60%;
+                    background-size: 70%;
                     background-repeat: no-repeat;
                     background-position: center;
-                    width: 30px;
-                    height: 30px;
+                    width: 32px;
+                    height: 32px;
                     border-radius: 50%;
                     border: 2px solid white;
                     box-shadow: 0 0 5px rgba(0,0,0,0.5);
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    color: white;
-                    font-weight: bold;
-                    opacity: ${isOnline ? '1' : '0.7'};
-                ">${mobileId.replace('Movil', '')}</div>`,
-                iconSize: [30, 30],
-                className: 'vehicle-marker'
+                "></div>`
             });
 
-            markers[mobileId] = L.marker(coords, { icon })
-                .addTo(map)
-                .bindPopup(`<b>${mobileId}</b><br>${isOnline ? 'En ruta' : 'Desconectado'}`);
+            markers[mobileId] = L.marker(coords, { 
+                icon: icon,
+                title: mobileId
+            }).addTo(map)
+            .bindPopup(`<b>${mobileId}</b><br>${isOnline ? 'En ruta' : 'Desconectado'}`);
         }
         
         function updateMarker(mobileId, coords, isOnline) {
@@ -394,26 +393,22 @@
                 createMarker(mobileId, coords, isOnline);
             } else {
                 const icon = L.divIcon({
+                    className: 'vehicle-marker',
+                    html: '',
+                    iconSize: [32, 32],
                     html: `<div style="
                         background-color: ${isOnline ? '#27ae60' : '#95a5a6'};
                         background-image: url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\" fill=\"white\"><path d=\"M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z\"/><circle cx=\"7.5\" cy=\"14.5\" r=\"1.5\"/><circle cx=\"16.5\" cy=\"14.5\" r=\"1.5\"/></svg>');
-                        background-size: 60%;
+                        background-size: 70%;
                         background-repeat: no-repeat;
                         background-position: center;
-                        width: 30px;
-                        height: 30px;
+                        width: 32px;
+                        height: 32px;
                         border-radius: 50%;
                         border: 2px solid white;
                         box-shadow: 0 0 5px rgba(0,0,0,0.5);
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: white;
-                        font-weight: bold;
                         opacity: ${isOnline ? '1' : '0.7'};
-                    ">${mobileId.replace('Movil', '')}</div>`,
-                    iconSize: [30, 30],
-                    className: 'vehicle-marker'
+                    "></div>`
                 });
 
                 markers[mobileId]
