--- a/index.html
+++ b/index.html
@@ -142,20 +142,14 @@
             border: 2px solid white;
             box-shadow: 0 0 5px rgba(0,0,0,0.5);
         }
-        /* Estilo para el logo de Acciona en los marcadores */
-        .acciona-marker {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            border: 2px solid white;
-            box-shadow: 0 0 5px rgba(0,0,0,0.5);
-            font-weight: bold;
-            color: white;
-            font-size: 12px;
-            text-align: center;
+        .vehicle-marker.online {
+            background-color: #27ae60;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z"/><circle cx="7.5" cy="14.5" r="1.5"/><circle cx="16.5" cy="14.5" r="1.5"/></svg>');
+        }
+        .vehicle-marker.offline {
+            background-color: #95a5a6;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z"/><circle cx="7.5" cy="14.5" r="1.5"/><circle cx="16.5" cy="14.5" r="1.5"/></svg>');
+            opacity: 0.7;
         }
     </style>
 </head>
@@ -377,19 +371,10 @@
             if (markers[mobileId]) return;
             
             const icon = L.divIcon({
-                className: 'vehicle-marker',
-                html: '',
+                className: isOnline ? 'vehicle-marker online' : 'vehicle-marker offline',
                 iconSize: [32, 32],
                 iconAnchor: [16, 16],
-                popupAnchor: [0, -16],
-                html: `<div class="acciona-marker" style="
-                    background-color: ${isOnline ? '#27ae60' : '#95a5a6'};
-                    background-image: url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\" fill=\"white\"><path d=\"M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z\"/><circle cx=\"7.5\" cy=\"14.5\" r=\"1.5\"/><circle cx=\"16.5\" cy=\"14.5\" r=\"1.5\"/></svg>');
-                    background-size: 70%;
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    opacity: ${isOnline ? '1' : '0.7'};
-                "></div>`
+                popupAnchor: [0, -16]
             });
 
             markers[mobileId] = L.marker(coords, { 
@@ -404,19 +389,10 @@
                 createMarker(mobileId, coords, isOnline);
             } else {
                 const icon = L.divIcon({
-                    className: 'vehicle-marker',
-                    html: '',
+                    className: isOnline ? 'vehicle-marker online' : 'vehicle-marker offline',
                     iconSize: [32, 32],
                     iconAnchor: [16, 16],
-                    popupAnchor: [0, -16],
-                    html: `<div class="acciona-marker" style="
-                        background-color: ${isOnline ? '#27ae60' : '#95a5a6'};
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\" fill=\"white\"><path d=\"M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.85 7h10.29l1.08 3.11H5.77L6.85 7zM19 17H5v-5h14v5z\"/><circle cx=\"7.5\" cy=\"14.5\" r=\"1.5\"/><circle cx=\"16.5\" cy=\"14.5\" r=\"1.5\"/></svg>');
-                        background-size: 70%;
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        opacity: ${isOnline ? '1' : '0.7'};
-                    "></div>`
+                    popupAnchor: [0, -16]
                 });
 
                 markers[mobileId]
