--- a/index.html
+++ b/index.html
@@ -241,6 +241,37 @@
             border-radius: 3px;
             border: 1px solid #ccc;
         }
+        /* Logo GPS personalizado */
+        .gps-logo {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background: var(--red-primary);
+            border-radius: 50%;
+            position: relative;
+            margin-right: 10px;
+        }
+        .gps-logo::before {
+            content: "";
+            position: absolute;
+            width: 36px;
+            height: 36px;
+            border: 2px solid var(--red-primary);
+            border-radius: 50%;
+            top: -6px;
+            left: -6px;
+            opacity: 0.6;
+        }
+        .gps-logo::after {
+            content: "";
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            background: white;
+            border-radius: 50%;
+            top: 8px;
+            left: 8px;
+        }
     </style>
 </head>
 <body>
@@ -248,7 +279,10 @@
     
     <div class="control-panel-container">
         <div class="control-panel" id="controlPanel">
-            <h3 style="margin-top:0;color:var(--red-dark);">🚗 Flota Acciona</h3>
+            <h3 style="margin-top:0;color:var(--red-dark);display:flex;align-items:center;">
+                <div class="gps-logo"></div>
+                Flota Acciona
+            </h3>
             
             <div class="vehicle-card">
                 <div class="vehicle-name">
@@ -322,7 +356,6 @@
         <select id="mapProvider">
             <option value="carto">CartoDB (Recomendado)</option>
             <option value="osm">OpenStreetMap</option>
-            <option value="stadia">Stadia Maps</option>
             <option value="esri">ESRI World Imagery</option>
         </select>
     </div>
@@ -371,11 +404,6 @@
                 url: 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
                 maxZoom: 19
-            },
-            stadia: {
-                url: 'https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.png',
-                attribution: '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a>, &copy; <a href="https://openmaptiles.org/">OpenMapTiles</a> &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
-                maxZoom: 20
             },
             esri: {
                 url: 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',
