--- a/login.html
+++ b/login.html
@@ -37,9 +37,52 @@
             text-align: center;
         }
         .logo {
-            color: var(--red-dark);
-            font-size: 2.5rem;
-            margin-bottom: 20px;
+            width: 80px;
+            height: 80px;
+            margin: 0 auto 20px;
+            position: relative;
+        }
+        .logo-pin {
+            width: 40px;
+            height: 40px;
+            background: var(--red-primary);
+            border-radius: 50% 50% 50% 0;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%) rotate(-45deg);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
+        .logo-pin::after {
+            content: '';
+            width: 20px;
+            height: 20px;
+            background: white;
+            border-radius: 50%;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+        .logo-circle {
+            width: 60px;
+            height: 60px;
+            border: 2px solid var(--red-primary);
+            border-radius: 50%;
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: pulse 2s infinite;
+        }
+        .logo-circle.inner {
+            width: 70px;
+            height: 70px;
+            opacity: 0.6;
+            animation-delay: 0.5s;
+        }
+        @keyframes pulse {
+            0% { transform: translateX(-50%) scale(1); opacity: 1; }
+            100% { transform: translateX(-50%) scale(1.5); opacity: 0; }
         }
         h1 {
             color: var(--red-dark);
@@ -97,7 +140,11 @@
 </head>
 <body>
     <div class="login-container">
-        <div class="logo">🚗</div>
+        <div class="logo">
+            <div class="logo-circle inner"></div>
+            <div class="logo-circle"></div>
+            <div class="logo-pin"></div>
+        </div>
         <h1>Acceso GPS Acciona</h1>
         <form id="loginForm">
             <div class="form-group">
@@ -195,4 +242,3 @@
     </script>
 </body>
 </html>
-
