--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
             background-color: var(--blue-dark);
             transition: all 0.3s ease;
         }
-        .diagnostic-panel.visible ~ .toggle-diagnostic-panel .diagnostic-hamburger-line:nth-child(1) {
+        .diagnostic-panel.visible + .toggle-diagnostic-panel .diagnostic-hamburger-line:nth-child(1) {
             transform: translateY(6px) rotate(45deg);
         }
-        .diagnostic-panel.visible ~ .toggle-diagnostic-panel .diagnostic-hamburger-line:nth-child(2) {
+        .diagnostic-panel.visible + .toggle-diagnostic-panel .diagnostic-hamburger-line:nth-child(2) {
             opacity: 0;
         }
-        .diagnostic-panel.visible ~ .toggle-diagnostic-panel .diagnostic-hamburger-line:nth-child(3) {
+        .diagnostic-panel.visible + .toggle-diagnostic-panel .diagnostic-hamburger-line:nth-child(3) {
             transform: translateY(-6px) rotate(-45deg);
         }
         /* Estilos para los iconos de autos */
@@ -266,6 +266,7 @@
             display: flex;
             justify-content: center;
             z-index: 1000;
+            pointer-events: none;
         }
         .refresh-btn {
             background: var(--red-primary);
@@ -280,6 +281,7 @@
             gap: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.2);
             transition: background 0.3s, transform 0.2s;
+            pointer-events: auto;
         }
         .refresh-btn:hover {
             background: var(--red-dark);
