--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
             
             <div id="other-vehicles-container" style="display: none;">
-                <h4 style="margin: 15px 0 10px 0; color: var(--red-dark);">Otros Vehículos</h4>
+                <h4 style="margin: 15px 0 10px 0; color: var(--red-dark);">Carruseles:</h4>
                 
                 <div class="vehicle-card">
                     <div class="vehicle-name">
@@ -1136,3 +1136,4 @@
     </script>
 </body>
 </html>
+
