--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
     <div class="map-provider-selector">
         <label for="mapProvider">Mapa:</label>
         <select id="mapProvider">
-            <option value="esri">ESRI World Imagery</option>
-            <option value="carto">CartoDB</option>
-            <option value="osm">OpenStreetMap</option>
+            <option value="esri">Satelital (Recomendada)</option>
+            <option value="carto">Cartográfica</option>
+            <option value="osm">Híbrida</option>
         </select>
     </div>
 
@@ -1136,4 +1136,5 @@
     </script>
 </body>
 </html>
+
 
