--- a/index.html
+++ b/index.html
@@ -375,7 +375,9 @@
         .leaflet-bottom.leaflet-right {
             bottom: 120px;
         }
-
+        .leaflet-control-attribution {
+    display: none !important;
+}
     </style>
 </head>
 <body>
@@ -1245,6 +1247,7 @@
     </script>
 </body>
 </html>
+
 
 
 
