--- a/login.html
+++ b/login.html
@@ -174,7 +174,7 @@
             </div>
             
             <div class="auto-login-notice" id="autoLoginNotice">
-                Acceso automático para Funcionarios (contraseña: 123456)
+                Acceso automático para Funcionarios.
             </div>
             
             <button type="submit">Ingresar al Sistema</button>
@@ -296,3 +296,4 @@
     </script>
 </body>
 </html>
+
