--- a/index.html
+++ b/index.html
@@ -152,6 +152,27 @@
         .diagnostic-panel-container {
             display: none;
         }
+        /* Icono de usuario (persona) */
+        .user-icon {
+            background-size: 70%;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            border: 2px solid white;
+            box-shadow: 0 0 5px rgba(0,0,0,0.5);
+            margin-right: 8px;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
+        }
+        .user-icon.online {
+            background-color: var(--online-color);
+        }
+        .user-icon.offline {
+            background-color: var(--offline-color);
+            opacity: 0.7;
+        }
+        /* Icono de vehículo (coche) */
         .vehicle-icon {
             background-size: 70%;
             background-repeat: no-repeat;
@@ -501,7 +522,7 @@
             
             <div class="vehicle-card">
                 <div class="vehicle-name">
-                    <div id="current-user-icon" class="vehicle-icon offline"></div>
+                    <div id="current-user-icon" class="user-icon offline"></div>
                     <span id="current-user-name">Mi Ubicación</span>
                 </div>
                 <div class="vehicle-status">
@@ -1347,7 +1368,7 @@
                 }
                 
                 if (iconElement) {
-                    iconElement.className = `vehicle-icon ${status === 'online' ? 'online' : 'offline'}`;
+                    iconElement.className = `user-icon ${status === 'online' ? 'online' : 'offline'}`;
                 }
             } 
             else if (isViewer) {
