--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 <div class="dashboard-tabs">
                     <div class="dashboard-tab active" data-tab="laps">Vueltas</div>
                     <div class="dashboard-tab" data-tab="metrics">Métricas</div>
-                    <div class="dashboard-tab" data-tab="performance">Rendimiento</div>
+                    <div class="dashboard-tab" data-tab="performance">📋</div>
                 </div>
                 
                 <div class="dashboard-content active" id="lapsContent">
@@ -1090,7 +1090,7 @@
             });
             document.getElementById('totalDistance').textContent = totalDistance + ' km';
             
-            document.getElementById('avgSpeed').textContent = '40 km/h';
+            document.getElementById('avgSpeed').textContent = '20 km/h';
             document.getElementById('fuelEfficiency').textContent = '5.2 km/L';
             document.getElementById('operatingHours').textContent = '8.5 h';
         }
@@ -1811,3 +1811,4 @@
     </script>
 </body>
 </html>
+
