--- a/index.html
+++ b/index.html
@@ -638,8 +638,8 @@
                 
                 <div class="dashboard-tabs">
                     <div class="dashboard-tab active" data-tab="laps">Vueltas</div>
-                    <div class="dashboard-tab" data-tab="metrics">Métricas</div>
-                    <div class="dashboard-tab" data-tab="performance">📋</div>
+                    <div class="dashboard-tab" data-tab="metrics">Data</div>
+                    <div class="dashboard-tab" data-tab="performance">Global</div>
                 </div>
                 
                 <div class="dashboard-content active" id="lapsContent">
@@ -1811,4 +1811,5 @@
     </script>
 </body>
 </html>
+
 
