--- a/index.html
+++ b/index.html
@@ -649,6 +649,11 @@
         .download-btn:hover {
             background: var(--blue-dark);
         }
+        #locationStatus {
+            font-size: 12px;
+            padding: 6px 10px;
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
@@ -2183,6 +2188,7 @@
     </script>
 </body>
 </html>
+
 
 
 
