--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
             color: #888;
             margin-top: 2px;
         }
+@media (min-width: 768px) {
+            .weather-widget {
+                top: 110px; /* Sube el logo 20 píxeles más arriba */
+                left: 15px; /* Mueve el logo más a la derecha */
+            }
+        }
+
+        
         
         .control-panel-container {
             position: fixed;
@@ -2188,6 +2196,7 @@
     </script>
 </body>
 </html>
+
 
 
 
