--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             padding: 5px;
             border-radius: 3px;
             border: 1px solid #ccc;
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, var(--transparency));
         }
         .status-notification {
             position: fixed;
@@ -479,7 +479,7 @@
             border: 1px solid #ccc;
             margin-top: 5px;
             width: 100%;
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, var(--transparency));
         }
         
         .leaflet-bottom.leaflet-right {
@@ -2233,5 +2233,6 @@
     </script>
 </body>
 </html>
+
 
 
