--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
             font-size: 10px;
             backdrop-filter: blur(5px);
         }
-        .map-provider-selector select {
-            padding: 5px;
-            border-radius: 3px;
-            border: 1px solid #ccc;
-            background: rgba(255, 255, 255, var(--transparency));
-        }
+       .map-provider-selector select {
+    padding: 5px;
+    border-radius: 3px;
+    border: none;
+    background-color: transparent;
+}
         .status-notification {
             position: fixed;
             top: 10px;
@@ -473,14 +473,14 @@
             font-size: 10px;
             backdrop-filter: blur(5px);
         }
-        .route-selector select {
-            padding: 5px;
-            border-radius: 3px;
-            border: 1px solid #ccc;
-            margin-top: 5px;
-            width: 100%;
-            background: rgba(255, 255, 255, var(--transparency));
-        }
+       .route-selector select {
+    padding: 5px;
+    border-radius: 3px;
+    border: none;
+    margin-top: 5px;
+    width: 100%;
+    background-color: transparent;
+}
         
         .leaflet-bottom.leaflet-right {
             bottom: 160px;
@@ -2233,6 +2233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
