--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             top: 120px; /* Bajado para que no quede sobre el botón de ruta */
             left: 15px;
             z-index: 1000;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, var(--transparency));
             padding: 8px;
             border-radius: 50%;
             box-shadow: 0 4px 12px rgba(0,0,0,0.15);
@@ -2233,6 +2233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
