--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             bottom: 20px;
             right: 20px;
             z-index: 1000;
-            background: var(--user-position-color);
+           background: rgba(52, 152, 219, var(--transparency));
             color: white;
             border: none;
             width: 42px;
@@ -2233,6 +2233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
