--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             margin-top: 5px;
         }
         .online { color: var(--online-color); }
-        .offline { color: var(--offline-color); }
+        .offline { color: #000000; }
         .logout-btn {
             background: var(--red-primary);
             color: white;
@@ -2233,6 +2233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
