--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         }
         .vehicle-name {
             font-weight: 600;
-            color: var(--red-dark);
+            color: #000000;
             display: flex;
             align-items: center;
         }
@@ -392,7 +392,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.2);
             font-size: 14px;
             font-weight: bold;
-            color: var(--red-dark);
+            color: #000000;
             backdrop-filter: blur(5px);
         }
         .pulse-circle {
@@ -2233,6 +2233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
