--- a/index.html
+++ b/index.html
@@ -738,11 +738,11 @@
         </select>
     </div>
 
-    <button class="emergency-locate-btn" id="emergencyLocateBtn" title="Centrar en mi ubicación">📍</button>
+    <button class="emergency-locate-btn" id="emergencyLocateBtn" title="Centrar en mi ubicación">👤</button>
 
     <div class="control-panel-container">
         <div class="control-panel" id="controlPanel">
-            <h3 style="margin-top:0;color:var(--red-dark);">🚗 Flota Acciona</h3>
+            <h3 style="margin-top:0;color:var(--red-dark);">🚐 Flota Acciona</h3>
             
             <div class="admin-dashboard" id="adminDashboard">
                 <h4>📊 Dashboard Administrador</h4>
@@ -2233,17 +2233,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
