--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         
         .admin-dashboard {
             display: none;
-            background: var(--dashboard-card);
+            background: rgba(255, 255, 255, var(--transparency));
             border-radius: 8px;
             padding: 15px;
             margin: 15px 0;
@@ -2223,4 +2223,5 @@
     </script>
 </body>
 </html>
+
 
