--- a/index.html
+++ b/index.html
@@ -610,8 +610,8 @@
             margin-bottom: 3px;
         }
         .lap-label {
-            font-size: 11px;
-            color: #666;
+        font-size: 11px;
+        color: black;
         }
         .dashboard-metrics {
             display: grid;
@@ -2223,5 +2223,6 @@
     </script>
 </body>
 </html>
+
 
 
