--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             bottom: 20px;
             right: 15px;
             z-index: 1000;
-           background: rgba(52, 152, 219, var(--transparency));
+            background: rgba(52, 152, 219, 0.7);
             color: white;
             border: none;
             width: 46px;
@@ -2223,6 +2223,7 @@
     </script>
 </body>
 </html>
+
 
 
 
