--- a/index.html
+++ b/index.html
@@ -659,6 +659,27 @@
             padding: 4px 8px;
             border-radius: 18px;
         }
+        .export-excel-btn {
+    background: #2ecc71;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 15px;
+    transition: background 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.export-excel-btn:hover {
+    background: #27ae60;
+}
     </style>
 </head>
 <body>
@@ -2198,7 +2219,41 @@
                 }
             }
         }
-        
+        function exportToExcel() {
+    const data = window.vehicleData; // Asume que los datos están disponibles globalmente en window.vehicleData
+    if (!data) {
+        alert('No hay datos de vehículos para exportar.');
+        return;
+    }
+
+    // Preparar los datos para la hoja de cálculo
+    const ws_data = [
+        ['ID', 'Nombre', 'Posición', 'Estado', 'Última Actualización', 'Batería', 'Velocidad', 'Conductor']
+    ];
+
+    data.forEach(vehicle => {
+        ws_data.push([
+            vehicle.mobileId,
+            vehicle.vehicleName,
+            `${vehicle.lat.toFixed(6)}, ${vehicle.lng.toFixed(6)}`,
+            vehicle.status === 'online' ? 'En ruta' : 'Desconectado',
+            new Date(vehicle.lastUpdated).toLocaleString(),
+            vehicle.battery,
+            `${vehicle.speed} km/h`,
+            vehicle.driverName
+        ]);
+    });
+
+    // Crear la hoja de cálculo
+    const ws = XLSX.utils.aoa_to_sheet(ws_data);
+    const wb = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(wb, ws, "Reporte Semanal");
+
+    // Guardar el archivo
+    const date = new Date();
+    const dateStr = `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}-${date.getDate().toString().padStart(2, '0')}`;
+    XLSX.writeFile(wb, `Reporte_Semanal_${dateStr}.xlsx`);
+}
         function logout() {
             if (gpsInterval) clearInterval(gpsInterval);
             if (locationUpdateInterval) clearInterval(locationUpdateInterval);
@@ -2223,6 +2278,7 @@
     </script>
 </body>
 </html>
+
 
 
 
