--- a/index.html
+++ b/index.html
@@ -977,9 +977,9 @@
     <div class="map-provider-selector">
         <label for="mapProvider">Mapa:</label>
         <select id="mapProvider">
-            <option value="esri">Satelital (Recomendada)</option>
-            <option value="carto">Cartográfica</option>
-            <option value="osm">Híbrida</option>
+            <option value="esri">Satelital (Recomendado)</option>
+            <option value="carto">Cartográfico</option>
+            <option value="osm">Híbrido</option>
         </select>
     </div>
 
@@ -2251,5 +2251,6 @@
     </script>
 </body>
 </html>
+
 
 
