--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             padding: 15px;
             margin: 15px 0;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            border: 1px solid var(--dashboard-border);
+            border: none;
         }
         .admin-dashboard h4 {
             color: var(--red-dark);
@@ -2251,6 +2251,7 @@
     </script>
 </body>
 </html>
+
 
 
 
