--- a/index.html
+++ b/index.html
@@ -537,13 +537,13 @@
         }
         
         .admin-dashboard {
-    display: none;
-    background: rgba(255, 255, 255, var(--transparency));
-    border-radius: 8px;
-    padding: 15px;
-    margin: 15px 0;
-    box-shadow: none;
-    border: none;
+            display: none;
+            background: rgba(255, 255, 255, var(--transparency));
+            border-radius: 8px;
+            padding: 15px;
+            margin: 15px 0;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            border: 1px solid var(--dashboard-border);
 }
         .admin-dashboard h4 {
             color: var(--red-dark);
@@ -2251,6 +2251,7 @@
     </script>
 </body>
 </html>
+
 
 
 
