--- a/index.html
+++ b/index.html
@@ -755,6 +755,17 @@
         .export-excel-btn:hover {
             background: #27ae60;
         }
+.weather-wind {
+            font-size: 10px;
+            color: #666;
+            margin-top: 2px;
+        }
+        .weather-precipitation {
+            font-size: 10px;
+            color: #666;
+            margin-top: 2px;
+        }
+        
     </style>
 </head>
 <body>
@@ -2480,5 +2491,6 @@
 </body>
 </html>
 ..
+
 
 
