--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             border-radius: 12px;
             width: auto;
             height: auto;
+            background: rgba(255, 255, 255, 0.85);
             min-width: 220px;
             padding: 15px;
         }
@@ -2452,5 +2453,6 @@
     </script>
 </body>
 </html>
+
 
 
