--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             pointer-events: none;
         }
         .control-panel {
-            background: rgba(255,255,255,var(--transparency));
+            background: rgba(255, 255, 255, 0.85);
             padding: 15px;
             border-radius: 12px 0 0 12px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
@@ -2453,6 +2453,7 @@
     </script>
 </body>
 </html>
+
 
 
 
