--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         }
         .toggle-panel {
             background: rgba(255,255,255,var(--transparency));
-            border: 1px solid var(--red-light);
+            border: none;
             width: 40px;
             height: 60px;
             border-radius: 8px 0 0 8px;
@@ -2453,6 +2453,7 @@
     </script>
 </body>
 </html>
+
 
 
 
