--- a/index.html
+++ b/index.html
@@ -1418,11 +1418,11 @@
         // Obtener mensaje de advertencia según el índice UV
         function getUvWarning(uvIndex) {
             if (uvIndex >= 6 && uvIndex <= 7) {
-                return '⚠️ Protección necesaria. Busque la sombra durante horas centrales del día, use camisa, gafas de sol y protector solar.';
+                return '⚠️ Protección necesaria. Use ERP, gorro y protector solar.';
             } else if (uvIndex >= 8 && uvIndex <= 10) {
-                return '⚠️️ Protección extra necesaria. Evite el sol entre las 10 a.m. y las 4 p.m. Use camisa, gafas de sol, sombrero y protector solar.';
+                return '⚠️ Protección necesaria. Use ERP, gorro y protector solar.';
             } else if (uvIndex > 10) {
-                return '⚠️️️ ¡Extremo! Tome todas las precauciones. Evite la exposición al sol entre las 10 a.m. y las 4 p.m. Sin protección, la piel puede dañarse en minutos.';
+                return '⚠️️️ ¡Extremo! Tome todas las precauciones. Use ERP, gorro y protector solar.';
             }
             return '';
         }
@@ -2453,8 +2453,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
