--- a/index.html
+++ b/index.html
@@ -170,14 +170,17 @@
             color: var(--uv-extreme);
         }
         .weather-warning {
-            margin-top: 8px;
-            padding: 6px;
-            border-radius: 4px;
-            font-size: 10px;
-            background-color: rgba(231, 76, 60, 0.2);
-            color: #d32f2f;
-            display: none;
-        }
+    margin-top: 8px;
+    padding: 6px;
+    border-radius: 4px;
+    font-size: 10px;
+    background-color: rgba(231, 76, 60, 0.2);
+    color: #d32f2f;
+    display: none;
+    line-height: 1.3; /* Añadido para mejor espaciado entre líneas */
+    white-space: normal; /* Asegura que el texto pueda envolverse */
+    text-align: left; /* Alinea el texto a la izquierda */
+}
         .weather-sources {
             font-size: 9px;
             color: #666;
@@ -1417,15 +1420,15 @@
 
         // Obtener mensaje de advertencia según el índice UV
         function getUvWarning(uvIndex) {
-            if (uvIndex >= 6 && uvIndex <= 7) {
-                return '⚠️ Protección necesaria. Use ERP, gorro y protector solar.';
-            } else if (uvIndex >= 8 && uvIndex <= 10) {
-                return '⚠️ Protección necesaria. Use ERP, gorro y protector solar.';
-            } else if (uvIndex > 10) {
-                return '⚠️️️ ¡Extremo! Tome todas las precauciones. Use ERP, gorro y protector solar.';
-            }
-            return '';
-        }
+    if (uvIndex >= 6 && uvIndex <= 7) {
+        return '⚠️ Protección necesaria.<br>Use ERP, gorro y protector solar.';
+    } else if (uvIndex >= 8 && uvIndex <= 10) {
+        return '⚠️ Protección necesaria.<br>Use ERP, gorro y protector solar.';
+    } else if (uvIndex > 10) {
+        return '⚠️️️ ¡Extremo! Tome todas las precauciones.<br>Use ERP, gorro y protector solar.';
+    }
+    return '';
+}
 
         // Obtener icono según código del clima
         function getWeatherIcon(iconCode) {
@@ -2453,3 +2456,4 @@
     </script>
 </body>
 </html>
+
